[gd_scene load_steps=4 format=3 uid="uid://ba1gt0ug2w16j"]

[ext_resource type="Script" path="res://gameplayReferences/attackManager.gd" id="1_1rysk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4fuvt"]
radius = 83.62

[sub_resource type="CircleShape2D" id="CircleShape2D_r1w6b"]
radius = 190.7

[node name="Attack2" type="Node2D"]
script = ExtResource("1_1rysk")

[node name="attackCooldown" type="Timer" parent="."]

[node name="meleeAttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="meleeAttackRange"]
shape = SubResource("CircleShape2D_4fuvt")

[node name="rangedAttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="rangedAttackRange"]
shape = SubResource("CircleShape2D_r1w6b")

[connection signal="timeout" from="attackCooldown" to="." method="_checkForTarget"]
[connection signal="body_entered" from="meleeAttackRange" to="." method="_checkForTarget"]
[connection signal="body_exited" from="meleeAttackRange" to="." method="_checkForTarget"]
[connection signal="body_entered" from="rangedAttackRange" to="." method="_checkForTarget"]
[connection signal="body_exited" from="rangedAttackRange" to="." method="_checkForTarget"]
